# scitos_3d_mapping_and_navigation

calibrate_sweeps/: CMakeLists.txt
dynamic_object_retrieval/dynamic_object_retrieval/include/dynamic_object_retrieval/cereal/archives/: json.hpp
dynamic_object_retrieval/dynamic_object_retrieval/src/: dynamic_convex_segmentation.cpp  dynamic_init_folders.cpp  extract_sift.cpp  register_objects.cpp
ekz-public-lib/: CMakeLists.txt
ekz-public-lib/src/FeatureExtractor/: OrbExtractor.cpp  SurfExtractor.cpp
ekz-public-lib/src/FrameMatcher/: AICK.cpp  BowAICK.cpp
ekz-public-lib/src/core/: RGBDFrame.cpp  Transformation.cpp
ekz-public-lib/src/mygeometry/: KeyPoint.cpp  KeyPoint2.cpp  KeyPointChain.cpp  Point2.cpp
learn_objects_action/src/learn_objects_action/: metric_sweep.py
object_manager/src/: dynamic_object_compute_mask_server.cpp
quasimodo/quasimodo_brain/: package.xml
quasimodo/quasimodo_brain/src/: metaroom_additional_view_processing.cpp
quasimodo/quasimodo_models/include/registration/: MassRegistrationPPR.h
quasimodo/quasimodo_models/include/weightfunctions/: DistanceWeightFunction2PPR2.h
quasimodo/quasimodo_models/src/registration/: MassRegistrationPPR.cpp
quasimodo/quasimodo_object_search/: package.xml
quasimodo/quasimodo_retrieval/: CMakeLists.txt  package.xml
quasimodo/retrieval_processing/src/: retrieval_segmentation.cpp
semantic_map/: README.md  package.xml
